<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"

              android:padding="16dp"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:weightSum="1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/description_ip"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/description_port"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txtIpAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/a_ch_ip"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txtPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/c_ng"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="Kết nối"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_quick_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quick_connect"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_auto_on_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tự động bật wifi"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>